# Document-editor

./: .gitignore  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/data/: documents.json  rooms.json
backend/src/: config.rs  main.rs
backend/src/broadcast/: dispatcher.rs
backend/src/crdt/: state.rs
backend/src/documents/: crdt.rs  http.rs  manager.rs  mod.rs  ws.rs
backend/src/handlers/: http.rs  websocket.rs
backend/src/latex/: http.rs
backend/src/models/: client.rs  mod.rs  operation.rs  room.rs
backend/src/rooms/: manager.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.tsx  index.css  main.jsx  main.tsx  types.ts
frontend/src/app/styles/: globals.css  tokens.css
frontend/src/components/: LiveCursors.jsx  RoomSelector.css  RoomSelector.jsx  Toolbar.css  Toolbar.jsx  UsersList.css  UsersList.jsx  Whiteboard.css  Whiteboard.jsx
frontend/src/core/api/: docsApi.ts  latexApi.ts  roomsApi.js  roomsApi.ts
frontend/src/core/crdt/: CRDTDocument.js  CRDTDocument.ts
frontend/src/crdt/: client-state.js
frontend/src/hooks/: useCRDT.js  useWebSocket.js  useWhiteboard.js
frontend/src/pages/: DocEditorPage.css  DocEditorPage.tsx  LaTeXEditorPage.css  LaTeXEditorPage.tsx  WhiteboardPage.css  WhiteboardPage.jsx  WhiteboardPage.tsx  latexBuilder.ts
frontend/src/services/: api.js
frontend/src/store/: canvasStore.js  canvasStore.ts  collabStore.js  collabStore.ts  docStore.ts  latexStore.ts  roomStore.js  roomStore.ts
frontend/src/utils/: shapes.jsx
(+54 files in other folders)
