[package]
name = "whiteboard-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "whiteboard-server"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix = "0.13"
actix-web-actors = "4"
actix-cors = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
